== Affiliates - Changelog ==

= 4.1.0 =
* WordPress 5.2 compatible.
* Fixed a PHP Notice related to an uninitialized variable $valid_affiliate.

= 4.0.5 =
* Added conditional check for registration message in registration template.
* Replaced uses of get_bloginfo( 'url' ) with home_url().
* Cleaned up unused code.
* Revised the affiliates_bloginfo() function and added optional filters.
* Updated the dashboard registration section to avoid showing a redundant login link when the section is shown alongside the login section.
* Added the options show_login and login_url to the dashboard registration section handler, used and customizable in the registration.php template.
* Added additional escaping on some translated strings.
* Improved the overview dashboard section, user is taken to the home after logout.
* Several code format improvements and replaced use of alias functions.
* Fixed wrong page ID recorded for user registration referrals on checkout.
* Fixed rendering issues in selects for names with slashes in the Traffic section.
* Added a results count in the traffic section when there is no pagination.

= 4.0.4 =
* Minor security improvements related to escaping output.
* Fixed various PHP code validation issues.
* Fixed various Javascript code validation issues.
* Fixed several code documentation issues.

= 4.0.3 =
* Code and documentation revision and improvements.
* Updated Spanish translation.
* Simplified Add-ons section.

= 4.0.2 =
* Updated the Indonesian translation.
* Updated the German translation.
* Updated the Spanish translation.
* Added improvements for responsiveness.
* Updated description in the registration admin section.
* Added a missing call to prepare().
* Improved handling of field/attribute usage related to payment emails.
* Fixed an issue with validating encoded affiliate id after affiliates_parse_request_affiliate_id filter applied.

= 4.0.1 =
* Added improvements for responsiveness on small screen sizes.

= 4.0.0 =